# monolith

./: .gitignore  Cargo.toml  architecture.drawio  bundle.bat  watch.bat
examples/: helloworld.fs  todo.fs
examples/notes/: Cargo.toml
examples/notes/src/: main.rs  page.rs  state.rs
examples/shoppinglist/: app.fs  resolvers.fs
examples/shoppinglist/schema/: shoppinglist.fs
examples/todo/: Cargo.toml  app.fs
examples/todo/logic/: logic.fs
examples/todo/schema/: todo.fs
examples/todo/src/: main.rs
examples/todo_single_threaded/: Cargo.toml
examples/todo_single_threaded/src/: main.rs
examples/youchat/: app.fs  resolvers.fs
examples/youchat/pages/: [chatroomId].fs  index.fs
examples/youchat/schema/: chat.fs
examples/youchat/ui/: chatrooms.fs
ideas/: way1.txt  way2.rs  way3.rs
public/: index.html  index.js
ts/: app.ts  message_sender.ts  path.ts  render.ts  types.ts  ws.ts
