[package]
name = "notes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
monolith_core = { path = "../../packages/core" }
log = "0.4"
futures = "0.3"
env_logger = "0.10"
tokio = { version = "1.0", features = ["full"] }