[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
monolith_core = { path = "../../packages/core" }
log = "0.4"
futures = "0.3"
env_logger = "0.10"